--- a/css/index.css
+++ b/css/index.css
@@ -74,23 +74,48 @@ h1, h2, h3, h4, h5 {
 	margin: 0 30px;
 }
 
+img.mobile-tab {
+    display: none;
+}
+
+/* @media ( max-width: 800px ) {
+    header {
+        display: flex;
+        flex-direction: 
+    }
+} */
+
 header nav { 
 	margin-top: 20px;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
 
+@media( max-width: 500px ) {
+	header nav {
+		
+		flex-direction: column;
+		align-items: center;
+		}
+		
+		.logo {
+			order: -1;
+		}
+}
+
 header nav a {
-	flex: 1;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: stretch;
 	text-decoration: none;
 	color: lightgrey;
 }
-
+@media( max-width: 500px ) {
+	header nav a{
+		font-size: 15pt;
+		padding-bottom: 40px;
+		border-bottom: 1px solid black;
+	}
+}
 
 .top-title {
 	display: flex;
@@ -171,4 +196,11 @@ footer {
 	margin: 20px 0;
 }
 
+.container {
+	max-width: 876px;
+	width: 100%;
+}
 
+@media( max-width: 500px ) {
+
+}
