tablet working, mobile somewhat broken

--- a/css/index.css
+++ b/css/index.css
@@ -326,72 +326,88 @@ footer {
 @media (max-width: 800px) {
   .container {
     max-width: 800px;
-	width: 100%;
-	/* margin: 5px 20px; */
+    width: 100%;
+    /* margin: 5px 20px; */
   }
   header nav {
     margin-top: 0;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-	align-items: flex-start;
-	padding: 0 45px 0 30px;
+    align-items: flex-start;
+    padding: 0 45px 0 30px;
   }
 
-    header nav a {
-	font-size: 12pt;
-	justify-content: space-evenly;
-	
+  header nav a {
+    font-size: 12pt;
+    justify-content: space-evenly;
   }
 
-
-    header nav a.logo {
-	order: -1;
-	width: 100%;
-	text-align: center;
-	justify-content: center;
-	padding-left: 20px;
-	margin-bottom: 40px;
-	/* margin: 30px 0 38px 0; */
-	/* padding-left: 30px; */
+  header nav a.logo {
+    order: -1;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    padding-left: 35px;
+    margin-bottom: 40px;
+    /* margin: 30px 0 38px 0; */
+    /* padding-left: 30px; */
   }
 
   .top-title {
-	  display: flex;
-	  	  width: 100%;
-
-	  margin-bottom: 15px
-	
-	  /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    margin: 0px 20px;
+    padding-bottom: 60px;
   }
 
   .top-title .title-left {
-	  padding: 35px 0 10px 15px;
-	  /* box-sizing: content-box; */
-	  width: 100%;
+    padding: 35px 0 10px 15px;
+    /* box-sizing: content-box; */
+    width: 100%;
   }
 
   .top-title .title-left .title-button {
-	  padding-top: 20px;
-	  margin: 10px;
+    padding-top: 20px;
+    margin: 10px;
   }
   .top-title .title-right .top-img {
     display: none;
   }
 
+  .main {
+    margin: 0 20px;
+  }
+
+  .top-content {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	padding: 0 10px;
+	flex-shrink: 1;
+  }
+
+  section.top-content img {
+	  max-width: 100%;
+  }
+
+
+  section.bottom-content {
+    padding: 0 10px;
+    display: flex;
+	flex-flow: row nowrap;
+		  justify-content: space-between;
 
   }
 
-  /* .top-title {
-	  width: 100%;
-	  display: flex
-	  justify-content: center;
-  } */
-.main {
-	margin: 0 20px;
-}
-  .top-content .text-half {
-	  width: 44%;
+  .container .text-third {
+	  width: 30%;
+  }
 
+  section.contact {
+    margin: 20px 20px;
+    padding: 0 10px;
   }
 }
