--- a/css/index.css
+++ b/css/index.css
@@ -158,6 +158,12 @@ h5 {
   max-width: 500px;
 }
 
+@media (min-width: 500px) {
+  .container {
+    width: 100%;
+    max-width: 800px;
+  }
+}
 header nav {
   display: flex;
   flex-flow: column nowrap;
@@ -250,4 +256,55 @@ img.middle-img {
 
 footer p {
   text-align: center;
+}
+
+@media (min-width: 500px) {
+  header nav {
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  header nav .logo {
+    width: 100%;
+    padding-top: 30px;
+  }
+
+  header nav a {
+    font-size: 12pt;
+    border-bottom: none;
+    padding: 0 0;
+  }
+
+  header nav a.links {
+    padding: 19px 30px 0 30px;
+  }
+
+  header nav a.last {
+    padding-right: 62px;
+  }
+
+  .top-title {
+    padding: 74px 0 66px;
+    margin: 0 1.1em;
+  }
+
+  .top-content {
+    display: flex;
+    align-items: flex-start;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    flex-shrink: 1;
+  }
+
+  .text-half {
+    flex: 1;
+    padding: 0;
+    
+  }
+
+  .main {
+    margin: 0 1.2em;
+  }
+
 }
