--- a/css/index.css
+++ b/css/index.css
@@ -273,15 +273,17 @@ footer p {
   header nav a {
     font-size: 12pt;
     border-bottom: none;
+    
     padding: 0 0;
   }
 
   header nav a.links {
-    padding: 19px 30px 0 30px;
+    flex: 1;
+    padding-top: 19px;
   }
 
   header nav a.last {
-    padding-right: 62px;
+    padding-right: 10px;
   }
 
   .top-title {
@@ -293,18 +295,32 @@ footer p {
     display: flex;
     align-items: flex-start;
     flex-flow: row wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     flex-shrink: 1;
   }
 
   .text-half {
+    justify-content: flex-end;
     flex: 1;
-    padding: 0;
+    padding: 0 1em 0 .6em;
     
   }
 
   .main {
     margin: 0 1.2em;
+  }
+  img.middle-img {
+    padding-top: 35px;
+  }
+
+  .bottom-content {
+    display: flex;
+    flex-flow: row wrap;
+  }
+  
+  .text-third {
+    flex: 1;
+    padding: 2em 2em 2.5em .6em;
   }
 
 }
