--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,8 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html,
 body,
 div,
@@ -129,18 +127,15 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
 }
-
 html,
 body {
   height: 100%;
   font-family: "Titillium Web", sans-serif;
 }
-
 h1,
 h2,
 h3,
@@ -150,228 +145,89 @@ h5 {
   letter-spacing: 1px;
   margin-bottom: 15px;
 }
-
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
-
 .container {
   width: 100%;
   max-width: 500px;
-}
-
-@media (min-width: 500px) {
-  .container {
-    width: 100%;
-    max-width: 800px;
-  }
 }
 header nav {
   display: flex;
   flex-flow: column nowrap;
   text-align: center;
 }
-
 header nav a {
   text-decoration: none;
-  font-size: 15pt;
+  font-size: 1.25em;
   color: grey;
   border-bottom: 1px solid black;
-  padding: 20px 0;
+  padding: 1em 0;
 }
-
 header nav .logo {
   order: -1;
-  padding: 19px 0;
+  padding: 0.95em 0;
 }
-
 .top-title {
-  padding: 50px 0 66px;
-  margin: 0 4%;
+  padding: 3.1em 0 4.2em;
+  margin: 0 1.3em;
   border-bottom: 2px solid black;
 }
-
-.title-left {
+.top-title .title-left {
   display: flex;
   flex-flow: column nowrap;
 }
-
-.title-text {
-  text-align: center;
-  /* padding-top: 50px; */
-}
-
-.title-text h1 {
-  font-size: 54pt;
-}
-
-.title-button {
+.top-title .title-left .title-text {
   text-align: center;
 }
-
-button.index {
+.top-title .title-left .title-text h1 {
+  font-size: 4.5em;
+  margin-bottom: 0.23em;
+}
+.top-title .title-left .title-button {
+  text-align: center;
+}
+.top-title .title-left .title-button .index {
   font-size: 12pt;
   margin: 9px 0;
   padding: 5px 42px;
   background-color: white;
   border: 1px solid black;
 }
-
-.top-img img {
+.top-title .title-right .top-img img {
   display: none;
 }
-
 .main {
-  margin: 0 4%;
+  margin: 0 1.25em;
 }
-
-.top-content {
+.main .top-content {
   display: flex;
   flex-flow: column nowrap;
-  padding-top: 35px;
+  padding-top: 2.188em;
 }
-.text-half {
-  padding: 25px 0;
+.main .top-content .text-half {
+  padding: 1.563em 0;
 }
-p {
+.main .top-content .text-half p {
   line-height: 1.1;
 }
-.bottom-content {
-  border-bottom: 2px solid black;
-}
-img.middle-img {
+.main .top-content img.middle-img {
   width: 100%;
   padding-top: 30px;
 }
-
-.text-third {
-  padding: 34px 0;
+.main .bottom-content {
+  border-bottom: 2px solid black;
 }
-
+.main .bottom-content .text-third {
+  padding: 1.9em 0 1.98em 0;
+}
+.main .bottom-content .text-third p {
+  line-height: 1.167em;
+}
 .contact {
-  padding: 35px 4%;
+  padding: 2.188em 1.25em 1.6em 1.25em;
 }
-
-.contact p {
-  padding-bottom: 12px;
+.contact .contact-text p {
+  padding-bottom: 0.95em;
 }
-
 footer p {
   text-align: center;
-}
-
-@media (min-width: 500px) {
-  header nav {
-    flex-flow: row wrap;
-    align-items: flex-start;
-    justify-content: space-between;
-  }
-
-  header nav .logo {
-    width: 100%;
-    padding-top: 30px;
-  }
-
-  header nav a {
-    font-size: 12pt;
-    border-bottom: none;
-    
-    padding: 0 0;
-  }
-
-  header nav a.links {
-    flex: 1;
-    padding-top: 19px;
-  }
-
-  header nav a.last {
-    padding-right: 10px;
-  }
-
-  .top-title {
-    padding: 74px 0 66px;
-    margin: 0 1.1em;
-  }
-
-  .top-content {
-    display: flex;
-    align-items: flex-start;
-    flex-flow: row wrap;
-    /* justify-content: space-between; */
-    flex-shrink: 1;
-  }
-
-  .text-half {
-    justify-content: flex-end;
-    flex: 1;
-    padding: 0 1em 0 .6em;
-    
-  }
-
-  .main {
-    margin: 0 1.2em;
-  }
-  img.middle-img {
-    padding-top: 35px;
-  }
-
-  .bottom-content {
-    display: flex;
-    flex-flow: row wrap;
-  }
-  
-  .text-third {
-    flex: 1;
-    padding: 2em 2em 2.5em .6em;
-  }
-
-}
-
-@media (min-width: 800px) {
-  .container {
-    max-width: 914px;
-    width: 100%;
-    margin-left: 55px;
-  }
-
-  header nav {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  header nav .logo {
-    flex: 1;
-    order: 0;
-    padding: 0;
-  }
-
-  header nav a.links {
-    padding: 0;
-    align-items: center;
-  }
-
-  .top-title {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: flex-end
-  }
-
-.title-left {
-  flex: 1;
-  justify-items: 
-}
-
-
-
-.title-right {
-  flex: 1;
-  
-}
-
- .top-img img {
-   display: flex;
-   margin-left: auto;
- }
-
 }
