--- a/less/index.less
+++ b/less/index.less
@@ -238,9 +238,9 @@ header {
     flex-flow: column nowrap;
     padding-top: 2.188em;
     .text-half {
-      padding: 1.563em 0;
+      padding: 1.463em 0;
       p {
-        line-height: 1.1;
+        line-height: 1.167em;
       }
     }
     img.middle-img {
@@ -251,7 +251,7 @@ header {
   .bottom-content {
     border-bottom: 2px solid black;
     .text-third {
-      padding: 1.9em 0 1.98em 0;
+      padding: 1.9em 0 2.2em 0;
       p {
         line-height: 1.167em;
       }
